Fuck you added!

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div>
             <a href="tel:+79170619621">+7 903 999-99-99</a>
+            <a href="Fuck you!"> Fuck you!</a>
             <button>Заказать звонок</button>
             <button>Новая кнопка</button>
         </div>
